# sphfluid

SPH_CPU_3D_v1/: CMakeLists.txt  sph_main.cpp  sph_timer.cpp  sph_timer.h
SPH_CPU_3D_v1/cmake_modules/: FindAntTweakBar.cmake  FindCGAL1.cmake  FindCairo.cmake  FindGLFW.cmake  FindGLM.cmake  FindGMP.cmake  FindGSL.cmake  FindHealPix.cmake  FindMatlab.cmake  FindOpenEXR.cmake  FindQwt.cmake  cmake-FindQwt.cmake
SPH_CPU_3D_v1/coreGL/: framework.h  gl_includes.h  gl_variables.h  shaders.cpp  shaders.h
